Upgrade from Java 7 to Java 8
- Update jackson-datatype-jdk7 to jackson-datatype-jdk8 and Jdk7Module to Jdk8Module
- Apply lambda expressions and method references across codebase
- Use Stream API for data processing (filter, map, collect, allMatch, etc.)
- Modernize date handling to java.time API (DateTimeFormatter, ZoneOffset)
- Use Optional for null-safe operations in Description model
- Apply try-with-resources for AutoCloseable resources (StopWord)
- Use diamond operator for generic type inference throughout
- Fix pre-existing bugs: OrgSynonymGenerator regex group references,
  FormattedText figref ID generation, StopWord test assertions
- Update README with Java 8 prerequisites, setup instructions, and features

Co-Authored-By: Sam Fertig <sam.huntfertig@gmail.com>